Fix header text alignment

--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -148,6 +148,7 @@ blockquote {
   flex-direction: column;
   align-items: center;
   padding: 0 5px;
+  text-align: center;
 }
 
 .header img{
@@ -161,6 +162,7 @@ blockquote {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   flex-grow: 1;
   margin-top: 0;
